--- a/app/globals.css
+++ b/app/globals.css
@@ -11,3 +11,13 @@ div, p, ul, li, span, a {
 h1 {
     font-family: 'Oswald', sans-serif;
 }
+
+
+.page {
+    background-color: white;
+    width: 80vw;
+    margin: auto;
+    padding: 2rem;
+    border: solid silver 0.5px;
+    border-radius: 0.3rem;
+}
