--- a/app/app/side-bar.module.css
+++ b/app/app/side-bar.module.css
@@ -28,3 +28,18 @@
     text-decoration:dotted;
     
 }
+
+.ul {
+    margin-left: 0px;
+    padding-left: 1rem;
+}
+
+.active {
+    background-color: #edecec;
+    padding: 0.4rem;
+    border-radius: 0.4rem;
+}
+
+.inactive {
+    padding: 0.4rem;
+}
