--- a/app/app/flashcards/flip-card.module.css
+++ b/app/app/flashcards/flip-card.module.css
@@ -3,7 +3,7 @@
     border: solid silver 1px;
     height: 15rem;
     border-radius: 1rem;
-
+    
     padding: 1rem;
     display: flex;
     align-items: center;
@@ -16,16 +16,20 @@
     align-items: center;
     justify-content: center;
     font-family: "Roboto Condensed", sans-serif;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     text-align: center;
   }
 
+  .term {
+    color: red;
+  }
+
   .container {
-    background-color: yellow;
+   
     width: 100%;
     height: 50vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f9fff5;
+    
   }
