Working on grid

--- a/app/app/layout.module.css
+++ b/app/app/layout.module.css
@@ -1,7 +1,10 @@
 .page {
-    display: grid;
-    grid-template-columns: 300px 1fr;
-    grid-gap: 2rem;
+    display: flex;
     
+    justify-content: center;
     
+}
+
+.pageContents {
+    max-width: 1098px;
 }
