--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -11,3 +11,13 @@
       margin-left: 1rem;
       margin-right: 2rem;
    }
+
+   .footer {
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      background-color: red;
+      color: white;
+      text-align: center;
+    }
