--- a/app/test/classes/[classid]/assign-papers/page.module.css
+++ b/app/test/classes/[classid]/assign-papers/page.module.css
@@ -1,4 +1,4 @@
 .papersDisplay {
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
+    grid-template-columns: 1fr 1fr 1fr 1fr 2fr 1fr 1fr 1fr;
 }
