--- a/app/learn/gpt/[code]/display-answers.module.css
+++ b/app/learn/gpt/[code]/display-answers.module.css
@@ -1,10 +1,20 @@
 
-.last10Answers {
+.dashboard {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.answersComponent {
     border: silver 1px solid;
     width: 10rem;
     padding: 0.5rem;
     margin: 0.5rem;
     border-radius: 0.5rem;;
+}
+
+.last10AnswerTitle {
+    font-size: 0.8rem;
 }
 
 .container {
