--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -17,7 +17,13 @@
       left: 0;
       bottom: 0;
       width: 100%;
-      background-color: red;
-      color: white;
-      text-align: center;
+      
+      color: silver;
+      text-align: right;
+    }
+
+
+    .pageLayout{
+      width: 80vw;
+      margin: auto;
     }
